añado foto, roles al back

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-<app-navegacion></app-navegacion>
 <router-outlet></router-outlet>
+<app-notificacion></app-notificacion>
