--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,12 +1,14 @@
+<app-navegacion></app-navegacion>
+
 <div class="relative h-screen bg-cover bg-center" style="background-image: url('assets/img/mate-pato.JPG');">
     <div class="absolute inset-0 flex flex-col mt-32 justify-start items-center text-center text-white px-4">
       <h1 class="text-6xl md:text-7xl font-extrabold drop-shadow-lg">COMPARTIR</h1>
       <p class="text-lg md:text-2xl mt-4 drop-shadow-md">
         Celebrando nuestra cultura, conectando a nuestra comunidad
       </p>
-      <button class="mt-6 px-6 py-3 bg-teal-400 hover:bg-teal-600 text-white font-semibold rounded shadow">
+      <a href="/registro" class="mt-6 bg-teal-400 hover:bg-teal-600 text-white font-semibold py-3 px-6 rounded shadow">
         UNIRSE A LA COMUNIDAD
-      </button>
+      </a>
     </div>
   </div>
 
@@ -90,6 +92,8 @@
     </div>
   </div>
   </div>
+
+  <app-footer></app-footer>
   
   
   
