--- a/src/app/componentes/user/registro/registro.component.html
+++ b/src/app/componentes/user/registro/registro.component.html
@@ -92,9 +92,9 @@
               accept="image/*"
               (change)="onFileSelected($event)"
             />
-             @if(selectedFile) {
-              <div class="text-red-500 text-sm">La foto no debe exceder los 2MB</div>
-            } 
+            <!-- @if(selectedFile) {
+              <div class="text-red-500 text-sm"></div>
+            } -->
           </div>
 
           <button
