--- a/src/app/componentes/admin/blog-admin/blog-admin.component.html
+++ b/src/app/componentes/admin/blog-admin/blog-admin.component.html
@@ -4,7 +4,7 @@
     <div class="flex justify-center mt-6">
   <button
     (click)="agregarBlog()"
-    class="btn-agregar btn-25 px-6 py-3 bg-teal-400 text-white text-lg font-semibold rounded-full shadow-md hover:bg-teal-500 focus:ring-2 focus:ring-teal-500"
+    class="btn-25 px-6 py-3 bg-teal-400 text-white text-lg font-semibold rounded-full shadow-md hover:bg-teal-500 focus:ring-2 focus:ring-teal-500"
   >
     Agregar nuevo post
   </button>
@@ -83,15 +83,15 @@
                 <div class="mt-4 flex gap-4">
                   <button
                     (click)="editarBlog(blog)"
-                    class="btn-blog bg-teal-400 text-white hover:text-black px-4 py-2 rounded-md hover:bg-teal-600"
+                    class="btn-77 text-white hover:text-teal-600 bg-teal-400 rounded-md hover:bg-white"
                   >
-                    Editar
+                    EDITAR
                   </button>
                   <button
-                    (click)="eliminarBlog(blog.id_blog)"
-                    class="btn-blog bg-black text-white hover:text-black px-4 py-2 rounded-md"
+                    (click)="eliminarBlog(blog)"
+                    class="btn-77 text-white hover:text-teal-600  bg-black hover:bg-white rounded-md"
                   >
-                    Eliminar
+                    ELIMINAR
                   </button>
                 </div>
               </div>
