--- a/src/app/componentes/admin/graficos-admin/graficos-admin.component.html
+++ b/src/app/componentes/admin/graficos-admin/graficos-admin.component.html
@@ -1,4 +1,4 @@
-<div class="charts-container">   
+<div class="charts-container mb-20">   
   <div>
     <canvas id="graficoBarras"></canvas>
   </div>
@@ -18,3 +18,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
