--- a/src/app/componentes/blog/blog.component.html
+++ b/src/app/componentes/blog/blog.component.html
@@ -1,21 +1,44 @@
-<div class="container">
-  <h1>Lista de Publicaciones</h1>
-  <div class="row">
+<app-navegacion></app-navegacion>
 
+<section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-10 rounded-lg shadow-2xl">
+  <!-- Contenedor principal con flex -->
+  <div class="flex flex-col md:flex-row items-center lg:space-x-8">
+    <!-- Contenido de texto -->
+    <div class="relative z-10 md:w-2/3 lg:w-1/2">
+      <h2 class="text-4xl font-extrabold leading-tight mb-4">
+        Noticias y curiosidades de Uruguay y España.
+      </h2>
+      <p class="text-lg mb-6">Investigamos sobre la relación que hay entre los países y sus culturas. Estamos al día de que pasa con nuestra comunidad.</p>
+
+      <!-- Botón para ver más eventos -->
+      <a href="#eventos" class="inline-block bg-yellow-400 text-white font-semibold text-lg py-2 px-6 rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out transform hover:scale-105">
+        Regístrate
+      </a>
+    </div>
+
+    <!-- Imagen 
+    <div class="relative md:w-1/3 lg:w-1/2 mt-8 md:mt-0">
+      <img class="rounded-lg shadow-md lg:max-h-96 object-cover" src="assets/img/mate-primo.jpeg" alt="Eventos Uruguayos" />
+    </div>-->
+  </div>
+</section>
+
+  <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 2xl:grid-cols-4 gap-8 lg:gap-6 xl:gap-4 justify-center my-20">
+    
     @for (blog of blogs; track blog.id_blog) {
-      <div class="col-md-4">
-        <div class="card mb-4">
-         <!-- <img src="{{ blog.image }}" class="card-img-top" alt="Imagen de {{ blog.titulo }}">-->
-          <div class="card-body">
-            <h5 class="card-title">{{ blog.titulo }}</h5>
-            <p class="card-text">{{ blog.categoria || 'Sin categoría' }}</p>
-            <a [routerLink]="['/blog']" class="btn btn-primary">Leer más</a>
-          </div>
+      <div class="flex flex-col bg-white shadow-lg rounded-lg overflow-hidden max-w-xs mx-auto">
+        <!-- <img [src]="blog.image" alt="Imagen de {{ blog.titulo }}" class="w-full h-48 object-cover"> -->
+        <div class="p-6 flex flex-col justify-between h-full">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-2 truncate">{{ blog.titulo }}</h3>
+          <p class="text-teal-500 text-sm mb-4">{{ blog.categoria || 'Sin categoría' }}</p>
+          <p class="text-gray-600 mb-4 flex-grow truncate">{{ blog.contenido }}...</p>
+          <a [routerLink]="['/blog', blog.id_blog]" class="hover:text-yellow-600 text-yellow-400 font-semibold py-2 px-4 rounded-lg transition duration-300 ml-auto">
+              LEER MÁS
+            </a>
         </div>
       </div>
     }
   </div>
-</div>
 
 <app-footer></app-footer>
 
