--- a/src/app/componentes/calendario/calendario.component.html
+++ b/src/app/componentes/calendario/calendario.component.html
@@ -1,3 +1,33 @@
+<app-navegacion></app-navegacion>
+
+<section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-8 rounded-lg shadow-2xl">
+  <!-- Contenedor principal con flex -->
+  <div class="flex flex-col md:flex-row items-center lg:space-x-8">
+    <!-- Contenido de texto -->
+    <div class="relative z-10 md:w-2/3 lg:w-1/2">
+      <h2 class="text-4xl font-extrabold leading-tight mb-4">
+        <span class="block text-2xl">¡No te pierdas los próximos eventos de Uruguayos!</span>
+        Conoce lo que está sucediendo.
+      </h2>
+      <p class="text-lg mb-6">Únete a nosotros para no perdertelos.</p>
+
+      <!-- Botón para ver más eventos -->
+      <a href="#eventos" class="inline-block bg-yellow-400 text-white font-semibold text-lg py-2 px-6 rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out transform hover:scale-105">
+        Ver más eventos
+      </a>
+    </div>
+
+    <!-- Imagen 
+    <div class="relative md:w-1/3 lg:w-1/2 mt-8 md:mt-0">
+      <img class="rounded-lg shadow-md lg:max-h-96 object-cover" src="assets/img/mate-primo.jpeg" alt="Eventos Uruguayos" />
+    </div>-->
+  </div>
+</section>
+
+
+
+  
+  
   <full-calendar
 [options]="calendarOptions">
 </full-calendar>
