--- a/src/app/componentes/graficos/graficos.component.html
+++ b/src/app/componentes/graficos/graficos.component.html
@@ -1,2 +1,26 @@
-<app-graficos-admin></app-graficos-admin>
+<app-navegacion></app-navegacion>
+
+<section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-8 rounded-lg shadow-2xl mb-20">
+    <!-- Contenedor principal con flex -->
+    <div class="flex flex-col md:flex-row items-center lg:space-x-8">
+      <!-- Contenido de texto -->
+      <div class="relative z-10 md:w-2/3 lg:w-1/2">
+        <h2 class="text-4xl font-extrabold leading-tight mb-4">
+          Datos curiosos
+        </h2>
+        <p class="text-lg mb-6">Información sobre la emigración de uruguayos por el mundo y en España</p>
+  
+        <!-- Botón para ver más eventos -->
+        <a href="#eventos" class="inline-block bg-yellow-400 text-white font-semibold text-lg py-2 px-6 rounded-full shadow-md hover:bg-yellow-500 transition duration-300 ease-in-out transform hover:scale-105">
+          
+        </a>
+      </div>
+  
+      <!-- Imagen 
+      <div class="relative md:w-1/3 lg:w-1/2 mt-8 md:mt-0">
+        <img class="rounded-lg shadow-md lg:max-h-96 object-cover" src="assets/img/mate-primo.jpeg" alt="Eventos Uruguayos" />
+      </div>-->
+    </div>
+  </section>
+  <app-graficos-admin></app-graficos-admin>
 
