--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -1,154 +1,147 @@
-<nav class="bg-white" >
-    <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
-      <div class="relative flex h-28 items-center justify-between">
-        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-          <!-- Mobile menu button-->
-          <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
-            <span class="absolute -inset-0.5"></span>
-            <span class="sr-only">Open main menu</span>
-            <!--
-              Icon when menu is closed.
-  
-              Menu open: "hidden", Menu closed: "block"
-            -->
-            <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-            </svg>
-            <!--
-              Icon when menu is open.
-  
-              Menu open: "block", Menu closed: "hidden"
-            -->
-            <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-            </svg>
-          </button>
+<nav class="bg-white">
+  <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
+    <div class="relative flex h-28 items-center justify-between">
+      <!-- Logo -->
+      <div class="flex items-center">
+        <a routerLink="/home">
+          <img class="h-16 w-auto" src="assets/img/logo-uru.png" alt="logo-uruguayos">
+        </a>
+      </div>
+      <!-- Desktop Menu -->
+      <div class="hidden sm:flex flex-1 items-center justify-between">
+        <div class="flex space-x-4">
+          <a routerLink="/home" routerLinkActive="bg-teal-400 text-white"
+            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Home</a>
+          <a routerLink="/presentacion" routerLinkActive="bg-teal-400 text-white"
+            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Historia</a>
+          <a routerLink="/blog" routerLinkActive="bg-teal-400 text-white"
+            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Noticias</a>
+          <a routerLink="/calendario" routerLinkActive="bg-teal-400 text-white"
+            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Eventos</a>
+          <a routerLink="/mapa" routerLinkActive="bg-teal-400 text-white"
+            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Negocios</a>
+          <a routerLink="/graficos" routerLinkActive="bg-teal-400 text-white"
+            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Gráficos</a>
         </div>
-        <div class="flex flex-1 items-center justify-between sm:items-center sm:justify-start">
-          <div class="flex flex-shrink-0 items-center">
-            <a href="/home">
-            <img class="h-16 w-auto" src="assets/img/logo-uru.png" alt="logo-uruguayos">
-          </a>
-          </div>
-          <div class="hidden sm:ml-6 sm:block">
-            <div class="flex items-center space-x-4">
-              <div class="flex items-center">
-              <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-              <a routerLink="/home" routerLinkActive="bg-teal-400 text-white"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
-              Home</a>
-              <a routerLink="/presentacion" 
-              routerLinkActive="bg-teal-400 text-white"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
-             Historia
-           </a>
-           <a routerLink="/blog" 
-              routerLinkActive="bg-teal-400 text-white"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
-             Noticias
-           </a>
-           <a routerLink="/calendario" 
-              routerLinkActive="bg-teal-400 text-white"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
-             Eventos
-           </a>
-           <a routerLink="/mapa" 
-              routerLinkActive="bg-teal-400 text-white"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
-             Negocios
-           </a>
-           <a routerLink="/graficos" 
-              routerLinkActive="bg-teal-400 text-white"
-              class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">
-             Graficos
-           </a>
+        <div class="flex items-center space-x-4">
+          @if(isAdmin){
+          <button class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</button>
+        }
 
-           
-              <a href="/admin" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</a>
-            </div>
-            </div>
+        @if (isLoggedIn) {
+          <span class="text-lg font-semibold text-teal-400">Hola, {{ userName }}</span>
+          <div class="relative">
+            <!-- Foto de usuario -->
+            <button class="h-8 w-8 rounded-full" (click)="toggleDropdownMenu()">
+              <img [src]="userImage" alt="img-perfil" class="h-8 w-8 rounded-full">
+            </button>
+            <!-- Opciones del usuario -->
+            @if (isDropdownMenuOpen) {
+              <div class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg z-10">
+                <button (click)="router.navigate(['/perfil'])"
+                        class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-teal-400">
+                  Ver Perfil
+                </button>
+                <button (click)="logout()"
+                        class="block w-full px-4 py-2 text-sm text-gray-700 hover:bg-teal-400">
+                  Salir
+                </button>
+              </div>
+            }
           </div>
-        </div>
-        <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-          <button type="button" class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-            <span class="absolute -inset-1.5"></span>
-            <span class="sr-only">View notifications</span>
-            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-            </svg>
+        }
+        <!-- Botones de Login y Registro si no está logeado -->
+        @if (!isLoggedIn) {
+          <button routerLink="/login"
+                  class="bg-teal-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600">
+            Login
           </button>
-  
-          <!-- Profile dropdown -->
-          <div class="relative ml-3">
-            <div>
-              <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-                <span class="absolute -inset-1.5"></span>
-                <span class="sr-only">Open user menu</span>
-                <img class="h-8 w-8 rounded-full" src="assets/img/img-paola.jpeg" alt="img-perfil">
+          <button routerLink="/registro"
+                  class="bg-yellow-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600">
+            Registro
+          </button>
+        }
+        </div>
+      </div>
+      <!-- Mobile Menu Button -->
+      <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
+        <button
+          (click)="toggleMobileMenu()"
+          class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
+          <span class="sr-only">Open main menu</span>
+          <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+
+<!-- Mobile Menu -->
+<div>
+  @if (!isMobileMenuOpen) {
+  }
+  @if (isMobileMenuOpen) {
+    <div class="md:hidden block">
+      <div class="space-y-1 px-2 pb-3 pt-2">
+        <a routerLink="/home" routerLinkActive="bg-teal-600 text-white"
+          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Home</a>
+        <a routerLink="/presentacion" routerLinkActive="bg-teal-600 text-white"
+          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Historia</a>
+        <a routerLink="/blog" routerLinkActive="bg-teal-600 text-white"
+          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Noticias</a>
+        <a routerLink="/calendario" routerLinkActive="bg-teal-600 text-white"
+          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Eventos</a>
+        <a routerLink="/mapa" routerLinkActive="bg-teal-600 text-white"
+          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Negocios</a>
+        <a routerLink="/graficos" routerLinkActive="bg-teal-600 text-white"
+          class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">Gráficos</a>
+
+        @if (isAdmin) {
+          <button class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-teal-600 hover:text-white">
+            Panel
+          </button>
+        }
+
+        <!-- Mostrar nombre, foto y flecha si el usuario está logueado -->
+        @if (isLoggedIn) {
+          <div class="flex items-center justify-center space-x-2 mt-2" (click)="toggleDropdownMenu()">
+            <div class="flex items-center space-x-2">
+              <img class="h-8 w-8 rounded-full" [src]="userImage" alt="img-perfil">
+              <span class="text-sm font-semibold text-teal-400">Hola, {{ userName }}</span>
+            </div>
+            <!-- Flecha hacia abajo -->
+            <svg class="h-5 w-5 text-teal-600 transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+            </svg>
+          </div>
+
+          <!-- Opciones del usuario -->
+          @if (isDropdownMenuOpen) {
+            <div class="flex flex-col space-y-2 mt-2">
+              <button (click)="router.navigate(['/perfil'])" class="block w-full px-4 py-2 text-base font-medium text-gray-300 hover:bg-teal-400">
+                Ver Perfil
+              </button>
+              <button (click)="logout()" class="block w-full px-4 py-2 text-base font-medium text-gray-300 hover:bg-teal-400">
+                Salir
               </button>
             </div>
-            
-            <!--
-              Dropdown menu, show/hide based on menu state.
-  
-              Entering: "transition ease-out duration-100"
-                From: "transform opacity-0 scale-95"
-                To: "transform opacity-100 scale-100"
-              Leaving: "transition ease-in duration-75"
-                From: "transform opacity-100 scale-100"
-                To: "transform opacity-0 scale-95"
-            -->
-              <!-- Mini menu activo 
-            <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-            Not Active: "bg-gray-100 outline-none",  ""
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
-            </div>-->
-          </div>
-          <div class="flex items-end">
-            <a href="/login" class="rounded-md ml-5 px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Login</a>
-            <a href="/registro" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Registro</a>
-          </div>
-        </div>
+          }
+        }
+
+        <!-- Botones de Login y Registro si no está logeado -->
+        @if (!isLoggedIn) {
+          <button routerLink="/login"
+                  class="block w-full bg-teal-400 text-white rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600">
+            Login
+          </button>
+          <button routerLink="/registro"
+                  class="block w-full bg-yellow-400 text-white rounded-md px-3 py-2 text-base font-medium hover:bg-teal-600">
+            Registro
+          </button>
+        }
       </div>
     </div>
-  
-    <!-- Mobile menu, show/hide based on menu state. -->
-    <div class="sm:hidden" id="mobile-menu">
-      <div class="space-y-1 px-2 pb-3 pt-2">
-        <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-        <a 
-        routerLink="/home" 
-        routerLinkActive="bg-gray-900 text-white" 
-        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white" 
-        aria-current="page">
-        Home
-      </a>
-      <a 
-        routerLink="/presentacion" 
-        routerLinkActive="bg-gray-900 text-white" 
-        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
-        Historia
-      </a>
-      <a 
-        routerLink="/blog" 
-        routerLinkActive="bg-gray-900 text-white" 
-        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
-        Noticias
-      </a>
-      <a 
-        routerLink="/calendario" 
-        routerLinkActive="bg-gray-900 text-white" 
-        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
-        Eventos
-      </a>
-      <a 
-        routerLink="/negocios" 
-        routerLinkActive="bg-gray-900 text-white" 
-        class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
-        Negocios
-      </a>
-      
-      </div>
-    </div>
+  }
+</div>
