--- a/src/app/componentes/presentacion/presentacion.component.html
+++ b/src/app/componentes/presentacion/presentacion.component.html
@@ -7,6 +7,8 @@
 </head>
 <body class="bg-gray-50 text-gray-900">
 
+<app-navegacion></app-navegacion>
+
   <section class="parallax-bg text-white py-40 relative">
     <div class="absolute inset-0 bg-gray-900/30"></div>
     <div class="max-w-4xl mx-auto text-center relative z-10">
