--- a/src/app/componentes/user/perfil/perfil.component.html
+++ b/src/app/componentes/user/perfil/perfil.component.html
@@ -1,1 +1,8 @@
-<p>perfil works!</p>
+<app-navegacion></app-navegacion>
+<div class="user-panel">
+    
+    <h2>Bienvenido, {{ user?.nombre }}</h2>
+    <p>Email: {{ user?.email }}</p>
+  
+    <button (click)="logout()" class="logout-btn">Cerrar Sesión</button>
+  </div>
